--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "swiper": "^9.2.4",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.7"
   }
 }
